CDAP-1473 Refactoring SerDe logic so that objects from streams and datasets deserialize in the same way, which only requires a Schema and does not require a Type. This will allow us to perform reads without requiring the dataset to provide a Type, which will open the door for certain platform provided datasets to be explorable.
Also fixing a bug if object fields are not equal to hive column
names due to lowercasing, and a deserialization bug around arrays.